--- a/TaskManager/templates/topbar.html
+++ b/TaskManager/templates/topbar.html
@@ -108,7 +108,16 @@
         <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+
+                {% if  user.is_authenticated %}
+                
+                {% if url %}
+                    <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ user.username }}</span>
+                {% ellif %}
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Username</span>
+                {% endif %}
+                {% endif %}
+
                 <img class="img-profile rounded-circle"
                     src="{% static 'img/undraw_profile.svg' %}">
             </a>
