--- a/TaskManager/templates/task_detail.html
+++ b/TaskManager/templates/task_detail.html
@@ -47,9 +47,9 @@
                         <!-- <p>{{ subtask.open }}</p> -->
                         <div>
                             <select data-subtask-id="{{ subtask.id }}" name="test" class="subtaskSelect">
-                                <option value="1">Waiting</option>
-                                <option value="2">Pending</option>
-                                <option value="3">Doing</option>
+                                <option value="1" {% if subtask.state == 1 %}selected{% endif %}>Waiting</option>
+                                <option value="2" {% if subtask.state == 2 %}selected{% endif %}>Pending</option>
+                                <option value="3" {% if subtask.state == 3 %}selected{% endif %}>Doing</option>
                             </select>
                         </div>
                         <div>
