taskdetail.html final

--- a/TaskManager/templates/task_detail.html
+++ b/TaskManager/templates/task_detail.html
@@ -46,7 +46,7 @@
                         <a style="{% if not subtask.open %}text-decoration: line-through;{% endif %}">{{ subtask.sub_task }}</a>
                         <!-- <p>{{ subtask.open }}</p> -->
                         <div>
-                            {% if not subtask.open %}
+                            {% if subtask.open %}
                             <select data-subtask-id="{{ subtask.id }}" name="test" class="subtaskSelect">
                                 <option value="1" {% if subtask.state == 1 %}selected{% endif %}>Waiting</option>
                                 <option value="2" {% if subtask.state == 2 %}selected{% endif %}>Pending</option>
